# Ogmen_assignment

./: README.md
bot_control/: CMakeLists.txt  README.md  package.xml
bot_control/launch/: laser_filter_launch.py
bot_control/src/: reading_laser.cpp
bot_description/: CMakeLists.txt  README.md  package.xml
bot_description/launch/: control.launch.py  rviz.launch.py  spawn.launch.py
bot_description/urdf/: bot.urdf.xacro  camera.xacro  diff_drive.xacro  lidar.xacro
bot_world/: CMakeLists.txt  README.md  package.xml
bot_world/launch/: simulation.launch.py
bot_world/world/: bot_world.world  world1.world
